--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        font-size: 0px;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
